Fixed word-wrapping

--- a/styles/view.sass
+++ b/styles/view.sass
@@ -31,7 +31,7 @@ body
       color: $black
       outline: 0
       word-spacing: 0.1em
-      white-space: pre-wrap
+      // white-space: pre-wrap
       text-indent: 0
       h1, h2, h3, h4, h5, h6
         font-size: 1.5em
